--- a/backend/.env
+++ b/backend/.env
@@ -1,10 +1,14 @@
-# This file contains environment variables for the application.
+# Flask
+FLASK_ENV=development
 
-DATABASE_URL=your_database_connection_string
-SECRET_KEY=your_secret_key
-EMAIL_HOST=your_email_host
-EMAIL_PORT=your_email_port
-EMAIL_HOST_USER=your_email_user
-EMAIL_HOST_PASSWORD=your_email_password
-SMS_API_KEY=your_sms_api_key
-SMS_API_SECRET=your_sms_api_secret
+# MySQL
+SQLALCHEMY_DATABASE_URI=mysql+pymysql://root:root123@localhost:3306/library
+
+# JWT
+JWT_SECRET=supersecretkey
+
+# SMTP / Email
+SMTP_SERVER=smtp.yourmail.com
+SMTP_PORT=587
+SMTP_USER=c.sidharthbr107@gmail.com.com
+SMTP_PASSWORD=sidharth@2004
